<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jimpitan.hangga.jimpitan.view.FrontActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_green"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/txtDay"
                android:layout_margin="4dp"
                android:gravity="right"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow_nganu"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/app_name"/>


            <TextView
                android:layout_marginTop="38dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow_nganu"
                android:textSize="18sp"
                android:text="@string/namalabel"/>


            <TextView
                android:id="@+id/txtNama"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/putih"
                android:textSize="38sp"
                android:maxLines="2"
                android:textStyle="bold"
                android:text="@string/nama"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/btnScanner"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:padding="6dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            android:background="@drawable/selector_btn_scanner"
            android:src="@drawable/ic_scan"
            android:visibility="gone"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputNominal"
            android:layout_width="200dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_above="@+id/flowRp">

            <EditText
                android:id="@+id/nominal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nominal"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <com.nex3z.flowlayout.FlowLayout
            android:id="@+id/flowRp"
            android:layout_toRightOf="@+id/txtRp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_above="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="left"
            android:foregroundGravity="left"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:flChildSpacing="auto"
            app:flChildSpacingForLastRow="align"
            app:flRowSpacing="8dp">
        </com.nex3z.flowlayout.FlowLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textColor="@color/putih"
            android:background="@drawable/selector_btn_submit"
            android:text="@string/submit"/>

        <ProgressBar
            android:id="@+id/send_progress"
            android:layout_alignParentBottom="true"
            style="@style/LinearProgress"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />
    </RelativeLayout>

    <!--

    <include layout="@layout/content_front" />
-->

    <!--<android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_camera" />-->

</android.support.design.widget.CoordinatorLayout>
